# Neural-Networks-from-scratch

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
NNLib/: ActivationFunction.cpp  ActivationFunction.h  DataLoader.cpp  DataLoader.h  Layer.cpp  Layer.h  LossFunction.cpp  LossFunction.h  Network.cpp  Network.h  Optimizer.cpp  Optimizer.h  Usings.h
